--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@ body {
     width: 100%;
     align-items: center;
     height: 100vh;
+    margin: 0;
   }
   
   .box {
@@ -31,4 +32,3 @@ body {
     height: auto;
   }
 
-  
