--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,7 @@ body {
     height: 38px !important;
   }
 
+
   .signin-container {
     width: 400px;
     height: auto;
@@ -50,9 +51,10 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center; /* Vertically center content if needed */
-    min-height: 100vh; /* Ensure full-screen height on most browsers */
-    min-width: 100vw;
-  
+    min-height: 80vh; /* Ensure full-screen height on most browsers */
+    min-width: 60vw;
+    border-radius: 20px;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5); /* Black shadow from all sides */
   }
   
   
