--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@ body {
     align-items: center;
     height: 100vh;
     margin: 0;
+    padding: 0;
   }
   
   .box {
@@ -57,4 +58,10 @@ body {
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5); /* Black shadow from all sides */
   }
   
+  .nav {
+    width: 100%;
+    height: 100vh; /* 100% of the viewport height */
+    display: flex; /* Use flexbox for layout */
+    flex-direction: column; /* Arrange children vertically */
+  }
   
