--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -41,7 +41,7 @@ nav .title{
 
 nav ul {
     display: flex;
-    margin-left: 300px
+margin-left: 300px
 }
 
 nav ul li {
@@ -61,7 +61,7 @@ nav ul li {
     text-decoration: none;
     color: #ffff;
     padding: 0.5rem;
-    margin: 0.5rem;
+    margin: 0.1rem;
     border-radius: 0.5rem;
 }
 
@@ -107,24 +107,24 @@ nav ul li:not(.active):hover{
     background-color: #729eca ;
 }
 
-
 nav .menu{
     display: none;
-    position: absolute;
-    top: 0.5rem;
-    right: 0.5rem;
-    flex-direction: column;
-    justify-content: space-between;
-    width: 2.25rem;
-    height: 2rem;
+    align-items: center; /* Center the menu icon vertically */
+    justify-content: center; /* Center the menu icon horizontally */
+    width: 40px; /* Adjust the width as needed */
+    height: 40px; /* Adjust the height as needed */
+    cursor: pointer;
 }
 
 nav .menu span{
-    height: 0.4rem;
-    width: 1005;
+    display: block; /* Change display to block */
+    width: 25px;
+    height: 3px;
     background-color: #fff;
-    border-radius: 0.2rem;
+    margin: 5px;
+    border-radius: 3px;
 }
+
 .search-box input {
     padding: 20px;
     margin: 2px;
@@ -153,25 +153,24 @@ nav .menu span{
   text-align: center;
 }
 
-
-
-@media (max-width: 480px){
+@media (max-width: 1500px){
     nav .menu{
-        display: flex;
+        display: flex; /* Ensure the menu button is displayed */
+        flex-direction: row;
+        width: 50px;
     }
     nav {
         flex-direction: column;
         align-items: start;
     }
     nav ul {
-        display: none;
+        display: none; /* Hide the menu by default */
         flex-direction: column;
-        width: 100%;
         margin-bottom: 0.25rem;
     }
 
     nav ul.open {
-        display: flex;
+        display: flex; /* Display the menu when the 'open' class is added */
     }
     
     nav ul li {
@@ -180,10 +179,5 @@ nav .menu span{
     }
     nav ul li a {
         margin: 0.2rem 0.5rem;
-
-    }
-    nav ul li a {
-        margin: 0.2rem 0.5rem;
-
     }
 }
