--- a/src/components/navbar/pages/profile/ProfileEdit/ProfileEdit.css
+++ b/src/components/navbar/pages/profile/ProfileEdit/ProfileEdit.css
@@ -1,14 +1,14 @@
-.profile{
+.profileEdit{
     background-color: white;
     color: black;
     min-height: 40vh;
     min-width: 95vw;
 }
-.profile.dark-mode{
+.profileEdit.dark-mode{
     background-color: #14223a;
     color: white;
 }
-.profile.mt-10 {
+.profileEdit.mt-10 {
     margin-top: 24.5rem;
     margin-bottom: 0.75rem; /* Update the margin-top value */
 }
@@ -16,4 +16,13 @@
     position: absolute;
     right: 20px;
     cursor: pointer;
+}
+.profile-edit-input{
+    display: grid;
+    gap: 10px;
+}
+.edit-input{
+    height: 40px;
+    border: 1px solid rgb(122, 118, 118);
+    border-radius: 4px;
 }
