--- a/src/components/navbar/pages/profile/Profile.css
+++ b/src/components/navbar/pages/profile/Profile.css
@@ -36,6 +36,7 @@
 .profile-info{
     display: flex;
     justify-content: space-between;
+    margin-top: 20px;
 }
 .right-info{
     margin-top: 30px;
@@ -48,4 +49,7 @@
     width: 250px;
     height: 250px;
     border-radius: 50%;
+    border: 2px solid #cacaca;
+    padding: 5px;
+    cursor: pointer;
 }
