--- a/src/components/navbar/pages/profile/ProfileEdit/ProfileEdit.css
+++ b/src/components/navbar/pages/profile/ProfileEdit/ProfileEdit.css
@@ -3,7 +3,7 @@
     color: black;
     min-height: 80vh;
     min-width: 95vw;
-    margin-top: 50px;
+    margin-top: 180px;
 }
 .profileEdit.dark-mode{
     background-color: #14223a;
@@ -67,4 +67,9 @@
     border-radius: 50%;
     border: 2px solid #cacaca;
     padding: 5px;
+}
+.edit-btn{
+    position: absolute;
+    right: 20px;
+    cursor: pointer;
 }
