--- a/src/components/navbar/pages/profile/ProfileEdit/ProfileEdit.css
+++ b/src/components/navbar/pages/profile/ProfileEdit/ProfileEdit.css
@@ -2,8 +2,17 @@
     background-color: white;
     color: black;
     min-height: 80vh;
-    min-width: 85vw;
-    margin-top: 180px;
+    min-width: 80vw;
+    margin-top: 800px;
+    border: 1px solid #000;
+}
+.profileEdit1{
+    background-color: white;
+    color: black;
+    min-height: 10vh;
+    min-width: 80vw;
+    margin-top: 20px;
+    border: 1px solid #000;
 }
 .profileEdit.dark-mode{
     background-color: #14223a;
