--- a/src/components/navbar/pages/profile/ProfileEdit/ProfileEdit.css
+++ b/src/components/navbar/pages/profile/ProfileEdit/ProfileEdit.css
@@ -96,3 +96,14 @@
     height: 100%;
     object-fit: cover;
 }
+.sticky-save-button {
+    position: fixed;
+    bottom: 10px; /* Adjust this value as needed */
+    width: 70px; /* Adjust width and left for centering */
+    transform: translateX(-50%);
+    z-index: 999; /* Ensure it's above other content */
+    background-color: white; /* Optionally, add a background color */
+    padding: 10px; /* Add padding for better visibility */
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); /* Add shadow for better visibility */
+  }
+  
