--- a/src/components/navbar/pages/profile/ProfileEdit/ProfileEdit.css
+++ b/src/components/navbar/pages/profile/ProfileEdit/ProfileEdit.css
@@ -3,7 +3,7 @@
     color: black;
     min-height: 80vh;
     min-width: 80vw;
-    margin-top: 800px;
+    margin-top: 1000px;
     border: 1px solid #000;
 }
 .profileEdit1{
@@ -14,10 +14,13 @@
     margin-top: 20px;
     border: 1px solid #000;
 }
-.profileEdit.dark-mode{
+.profileEdit-card-container{
+    background-color: white;
+}
+/* .profileEdit.dark-mode{
     background-color: #14223a;
     color: white;
-}
+} */
 .profileEdit.mt-10 {
     margin-top: 24.5rem;
     margin-bottom: 0.75rem; /* Update the margin-top value */
@@ -35,13 +38,14 @@
     height: 40px;
     border: 1px solid rgb(122, 118, 118);
     border-radius: 4px;
+    background-color: white
 }
 .textarea-input {
     border: 1px solid rgb(122, 118, 118);
     border-radius: 4px;
     padding: 8px; /* Add padding for better spacing */
     box-sizing: border-box; /* Ensure padding is included in the width */
-    /* Add any additional styling specific to textareas */
+    background-color: white
 }
 
 
