--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -145,6 +145,7 @@ nav .menu span{
   flex-direction: column;
   align-items: center;
   justify-content: center; /* Add this */
+  cursor: pointer;
 }
 
 .icon-with-text p {
