--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -26,7 +26,7 @@ nav{
     display: flex; /* Use flexbox for layout */
     flex-direction: row;
     justify-content: center;
-    position: absolute;
+    position: sticky;
     top: 0;
   }
 
