--- a/src/components/navbar/pages/profile/Profile.css
+++ b/src/components/navbar/pages/profile/Profile.css
@@ -3,7 +3,7 @@
     color: black;
     min-height: fit-content;
     min-width: 80vw;
-    margin-top: 550px;
+    margin-top: 200px;
     border: 1px solid #000;
 }
 .profile1{
@@ -29,6 +29,9 @@
     position: absolute;
     right: 20px;
     cursor: pointer;
+    background-color: white;
+    color: #000;
+    border-radius: 4px;
 }
 .user-name{
     font-weight: bold;
@@ -74,4 +77,21 @@
     border: 2px solid #cacaca;
     padding: 5px;
     cursor: pointer;
+    position: relative; /* Add position relative */
+    z-index: 1; 
+    margin-top: 50px;
+}
+.cover-photo-container {
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 300px; /* Adjust height as needed */
+    overflow: hidden; /* Hide any overflow */
+}
+
+.cover-photo {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Maintain aspect ratio while covering the container */
 }
