--- a/src/components/navbar/pages/profile/ProfileEdit/ProfileEdit.css
+++ b/src/components/navbar/pages/profile/ProfileEdit/ProfileEdit.css
@@ -3,7 +3,7 @@
     color: black;
     min-height: 80vh;
     min-width: 80vw;
-    margin-top: 800px;
+    margin-top: 980px;
     border: 1px solid #000;
 }
 .profileEdit1{
@@ -55,6 +55,7 @@
     border-radius: 50%;
     border: 2px solid #cacaca;
     padding: 5px;
+    object-fit: contain;
 }
 
 .edit-button {
