--- a/src/components/navbar/pages/profile/Profile.css
+++ b/src/components/navbar/pages/profile/Profile.css
@@ -3,8 +3,9 @@
     color: black;
     min-height: fit-content;
     min-width: 80vw;
-    margin-top: 280px;
+    margin-top: 1000px;
     border: 1px solid #000;
+  
 }
 .profile1{
     background-color: white;
@@ -32,6 +33,8 @@
     background-color: white;
     color: #000;
     border-radius: 4px;
+    padding: 10px;
+    margin: 10px;
 }
 .user-name{
     font-weight: bold;
@@ -50,7 +53,7 @@
     font-weight: 600;
     margin-bottom: 10px;
 }
-.about-data {
+.description-data {
     word-wrap: break-word; /* Allow long words to break and wrap onto the next line */
     width: 100%; /* Make sure the text takes the full width of its container */
     max-width: 70vw;
@@ -86,7 +89,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 300px; /* Adjust height as needed */
+    height: 500px; /* Adjust height as needed */
     overflow: hidden; /* Hide any overflow */
 }
 
@@ -94,4 +97,20 @@
     width: 100%;
     height: 100%;
     object-fit: cover; /* Maintain aspect ratio while covering the container */
+}
+.education{
+    font-size: 19px;
+    margin-top: 10px;
+    margin-bottom: 8px;
+    font-weight: 500px;
+    width: 600px;
+    line-height: 20px;
+}
+.edu-info{
+    font-size: 16px;
+    color: #25272b;
+}
+.year-act{
+    font-size: 15px;
+    color: #6c747f;
 }
