post upload modal is created

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #ffff;
+    background-color: whitesmoke;
     display: flex;
     justify-content: center;
     align-content: center;
