--- a/src/components/navbar/pages/home/posts/PostStatus.css
+++ b/src/components/navbar/pages/home/posts/PostStatus.css
@@ -15,12 +15,23 @@
     justify-content: center;
     align-items: center;
   }
-  .open-post-modal{
+  .open-post-modal {
     width: 100%;
     height: 40px;
-    text-align: left;
+    text-align: center;
     background-color: whitesmoke;
-    padding: 10px;
+    padding: 10px 80px; /* Adjust the padding accordingly */
     margin: 10px;
-    border-radius: 5px;
+    border-radius: 30px;
   }
+  
+  
+  .post-list {
+    width: 60%; /* Adjust the width as needed */
+    margin: auto; /* Add this line to center the element horizontally */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 5px;
+  }
+  
