--- a/src/components/navbar/pages/home/posts/modal/Modal.css
+++ b/src/components/navbar/pages/home/posts/modal/Modal.css
@@ -50,5 +50,5 @@
     font-size: 16px ;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     width: 100%;
-
+    background-color: white;
 }
