--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@ body {
   align-content: center;
   width: 100%;
   align-items: center;
-  height: 100vh;
+  /* height: 100vh; */
   margin: 0;
   padding: 0;
   color: #0000;
