--- a/src/components/navbar/pages/home/posts/PostStatus.css
+++ b/src/components/navbar/pages/home/posts/PostStatus.css
@@ -4,7 +4,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 300px;
+    /* margin-top: 300px; */;
+    /* position: fixed; */
+    left: 0;
+    right: 0;
+    z-index: 10;
+    /* box-shadow: 0.5rem 1rem rgba(0, 0, 0, .15)!important; */
   }
   
   .post-status {
