--- a/src/components/navbar/pages/profile/ProfileEdit/ProfileEdit.css
+++ b/src/components/navbar/pages/profile/ProfileEdit/ProfileEdit.css
@@ -3,8 +3,9 @@
     color: black;
     min-height: 80vh;
     min-width: 80vw;
-    margin-top: 3000px;
+    /* margin-top: 3000px; */
     border: 1px solid #000;
+    margin-top: 10px;
    
 }
 .profileEdit1{
