--- a/src/App.css
+++ b/src/App.css
@@ -52,8 +52,10 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center; /* Vertically center content if needed */
-  min-height: 80vh; /* Ensure full-screen height on most browsers */
-  min-width: 90vw;
   border-radius: 20px;
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5); /* Black shadow from all sides */
+  height: 800px;
+  margin-top: 70px;
+  margin-left: 60px;
+  margin-right: 60px;
 }
