--- a/src/App.css
+++ b/src/App.css
@@ -55,7 +55,8 @@ body {
   border-radius: 20px;
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5); /* Black shadow from all sides */
   height: 800px;
-  margin-top: 70px;
+  margin-top: 30px;
   margin-left: 60px;
   margin-right: 60px;
+  margin-bottom: 30px;
 }
