--- a/src/components/navbar/pages/connections/Connections.css
+++ b/src/components/navbar/pages/connections/Connections.css
@@ -20,3 +20,10 @@
     padding: 5px;
     background-color: #4BA5F5;
   }
+  .conn-img{
+    width: 45px;
+    border-radius: 50%;
+    object-fit: contain;
+    height: 45px;
+    border: 1px solid rgb(168, 167, 167);
+  }
