--- a/src/components/navbar/pages/home/self-profile/SelfProfile.css
+++ b/src/components/navbar/pages/home/self-profile/SelfProfile.css
@@ -1,7 +1,7 @@
 .self-profile{
    height: 500px;
-   width: 200px;
-   margin-left: 100px;
+   width: 250px;
+   margin-left: 150px;
 }
 .cover-photo-container-p {
     position: relative;
@@ -25,7 +25,7 @@
     cursor: pointer;
     position: absolute;
     bottom: 300px;
-    left: calc(66% - 125px); /* Half of the image width */
+    left: calc(71% - 125px); /* Half of the image width */
     z-index: 1;
 }
 .user-info-div{
@@ -47,4 +47,20 @@
     font-weight: 400px;
     width: 300px;
     line-height: 20px;
+    margin-bottom: 5px;
+    color: #3e3c3cbb;
+}
+.view-count-main{
+    display: flex;
+    flex-direction: row;
+    align-items: center; /* aligns items along the cross-axis (vertically) */
+    text-align: center; 
+    margin-top: 5px;
+    gap: 100px;
+    color: #474646bb;
+    font-size: 13px;
+    font-weight: 400;
+}
+.view-count{
+    color: rgb(96, 140, 237);
 }
