--- a/src/index.css
+++ b/src/index.css
@@ -4,25 +4,6 @@
 
 #root{
     width: 100%;
+    /* height: 100%; */
 }
 
-
-.container {
-    display: flex;
-    justify-content: center;
-    align-items: center; 
-    height: 100vh; 
-    gap: 4px;
-
-  }
-
-  .content {
-    display: flex;
-    font-size: 15px; 
-    color: white;
-    text-align: center;
-    background-color: black;
-    border-radius: 5%;
-    gap: 4px;
-  }
-  
