--- a/src/components/navbar/pages/connections/Connections.css
+++ b/src/components/navbar/pages/connections/Connections.css
@@ -1,9 +1,10 @@
 .connections{
     background-color: white;
     color: black;
-    min-height: 100vh;
+    min-height: 30vh;
     min-width: 80vw;
     margin-top: 10px;
+    overflow-y: auto;
   
 }
 .connections-card-container{
@@ -19,6 +20,20 @@
     border: 1px solid #ccc; /* Add border to each user item */
     padding: 5px;
     background-color: #4BA5F5;
+    margin-right: 2px;
+  }
+
+  .ignore-button {
+    border: 1px solid #ccc; /* Add border to each user item */
+    padding: 5px;
+    background-color: #f54b4b;
+    margin-right: 2px;
+  }
+  .accept-button {
+    border: 1px solid #ccc; /* Add border to each user item */
+    padding: 5px;
+    background-color: #4bf570;
+    margin-right: 2px;
   }
   .conn-img{
     width: 45px;
