--- a/src/components/navbar/pages/home/news-section/News.css
+++ b/src/components/navbar/pages/home/news-section/News.css
@@ -1,7 +1,7 @@
 .news{
-    width: 300px;
-    margin-right: 100px;
-    margin-left: 10px;
+    min-width: 200px;
+    /* margin-right: 100px; */
+    /* margin-left: 10px; */
  }
 
  ul.article-list {
