--- a/src/components/navbar/pages/home/posts/PostCard.css
+++ b/src/components/navbar/pages/home/posts/PostCard.css
@@ -1,5 +1,5 @@
 .posts-list {
-    width: 1000px; /* Adjust the width as needed */
+    /* width: 1000px; Adjust the width as needed */
     margin: auto; /* Add this line to center the element horizontally */
     display: flex;
     align-items: left;
