--- a/src/components/navbar/pages/connections/Connections.css
+++ b/src/components/navbar/pages/connections/Connections.css
@@ -1,14 +1,18 @@
 .connections{
     background-color: white;
     color: black;
-    min-height: 100vh;
     min-width: 80vw;
     margin-top: 10px;
+    overflow-y: auto;
   
 }
 .connections-card-container{
     background-color: white;
     
+}
+.card-body hr {
+  margin-top: 1rem;  /* Adjust margin as needed */
+  margin-bottom: 1rem;
 }
 .connection-item {
     border: 1px solid #ccc; /* Add border to each user item */
@@ -19,6 +23,20 @@
     border: 1px solid #ccc; /* Add border to each user item */
     padding: 5px;
     background-color: #4BA5F5;
+    margin-right: 2px;
+  }
+
+  .ignore-button {
+    border: 1px solid #ccc; /* Add border to each user item */
+    padding: 5px;
+    background-color: #f54b4b;
+    margin-right: 2px;
+  }
+  .accept-button {
+    border: 1px solid #ccc; /* Add border to each user item */
+    padding: 5px;
+    background-color: #4bf570;
+    margin-right: 2px;
   }
   .conn-img{
     width: 45px;
@@ -26,4 +44,7 @@
     object-fit: contain;
     height: 45px;
     border: 1px solid rgb(168, 167, 167);
+  }
+  .conn-headline{
+    margin-top: 2px;
   }
